# workshop-platform

./: .dockerignore  .env.template  .gitignore  .pre-commit-config.yaml  001-dependencies-managment.md  Dockerfile  LICENSE  README.md  attend_workshop.py  main.py  pyproject.toml  requirements.txt  signup.py  test_main.http
.github/workflows/: base.yaml
adr/: 001-dependencies-managment.md
src/: database.py  main.py  signup.py
src/api/: config.py  dependencies.py
src/attend_workshop/: domain.py  model.py  router.py  service.py
src/auth/: password_util.py  validate.py
src/core/: command.py  config.py  decider.py  dependencies.py  event.py  event_handler.py  results.py
src/endpoints/: attend_workshop.py  healthz.py
src/signup/: router.py
tests/: conftest.py  test_health.py  test_signup.py
