[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "workshop-platform"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
keywords = []
authors = [
  { name = "czakuou", email = "pakata321@gmail.com" },
  { name = "mkubasz", email = "mkubasz@gmail.com" }
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/unknown/workshop-platform#readme"
Issues = "https://github.com/unknown/workshop-platform/issues"
Source = "https://github.com/unknown/workshop-platform"

[tool.hatch.version]
path = "src/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
  "fastapi==0.103.1",
  "httpx==0.25.0",
  "uvicorn==0.23.2",
  "python-dotenv==1.0.0",
  "pydantic==2.3.0",
  "pytest-httpx==0.26.0",
  "pydantic-settings==2.0.3"
]
