[tool.poetry]
name = "workshop-platform"
version = "0.1.0"
description = ""
authors = ["czakuou <pakata321@gmail.com>", "mkubasz <mkubasz@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.1"
httpx = "^0.25.0"
uvicorn = "^0.23.2"
pydantic = {extras = ["email"], version = "^2.4.0"}
pytest = "^7.4.2"
pytest-httpx = "^0.26.0"
pydantic-settings = "^2.0.3"
sqlalchemy = "^2.0.21"
psycopg2-binary = "^2.9.7"
bcrypt = "^4.0.1"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
